--- a/MiPortfolio3/src/app/principal-info/components/education/education.component.html
+++ b/MiPortfolio3/src/app/principal-info/components/education/education.component.html
@@ -10,6 +10,7 @@
           type="number" min="1940" 
           placeholder="Año de inicio" 
           formControlName="startDateYear"
+          [ngModel] = "educationItemTemp.startDateYear"
           aria-label=".form-control-sm example">
           <p 
             class="error" 
@@ -24,6 +25,7 @@
           min="1940" 
           placeholder="Año de finalización" 
           formControlName="endDateYear"
+          [ngModel] = "educationItemTemp.endDateYear"
           aria-label=".form-control-sm example">
 
 
@@ -32,6 +34,7 @@
           type="text" 
           placeholder="Ciudad"
           formControlName="city" 
+          [ngModel] = "educationItemTemp.city"
           aria-label=".form-control-sm example">
           <p 
             class="error" 
@@ -45,6 +48,7 @@
           type="text" 
           placeholder="País" 
           formControlName="country"
+          [ngModel] = "educationItemTemp.country"
           aria-label=".form-control-sm example">
           <p 
             class="error" 
@@ -58,6 +62,7 @@
           type="text" 
           placeholder="Título" 
           formControlName="degree"
+          [ngModel] = "educationItemTemp.degree"
           aria-label=".form-control-sm example">
           <p 
             class="error" 
@@ -71,6 +76,7 @@
           type="text" 
           placeholder="Institución" 
           formControlName="institution"
+          [ngModel] = "educationItemTemp.institution"
           aria-label=".form-control-sm example">
           <p 
             class="error" 
@@ -84,7 +90,10 @@
     </div>
     
     <div class="container" *ngFor="let education of educationItems">
-        <app-education-item [education]="education"></app-education-item>
+        <app-education-item 
+          [education]="education" 
+          (editionEducationEvent)="educationToEdit($event)"
+          (removeEducationEvent)="educationToRemove($event)"></app-education-item>
     </div>
     
 </div>
