--- a/MiPortfolio3/src/app/principal-info/components/interests/interests.component.css
+++ b/MiPortfolio3/src/app/principal-info/components/interests/interests.component.css
@@ -1,3 +1,15 @@
 a{
     font-size:1rem;
 }
+
+.formulario{
+    margin-bottom: 5rem;
+}
+
+.btn{
+    width: 100%;
+}
+
+.error{
+    color:red;
+}
