--- a/MiPortfolio3/src/app/projects/components/project-item/project-item.component.html
+++ b/MiPortfolio3/src/app/projects/components/project-item/project-item.component.html
@@ -8,7 +8,7 @@
     <a [href]= "project.link" target="_blank">Visitar</a>
     <article>
         <fa-icon [icon]="editIcon" (click)="projectToEditEmitter(project)" class="fa-2x edit-icon"></fa-icon>
-        <fa-icon [icon]="removeIcon" class="fa-2x remove-icon"></fa-icon>
+        <fa-icon [icon]="removeIcon" class="fa-2x remove-icon" (click)="projectToRemoveEmitter(project)"></fa-icon>
     </article>
     
   </div>
