--- a/MiPortfolio3/src/app/app.component.html
+++ b/MiPortfolio3/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav-bar></app-nav-bar>
 <app-banner></app-banner>
 <app-principal-info></app-principal-info>
+<app-skill-section></app-skill-section>
 <app-projects></app-projects>
